Code cleanup; resolved several FindBugs issues, performed several cleanups and tidied up the action initialization code. Also added convenience methods to create a channel selector.